# HexControl1920

./: .gitignore  Challenge mission.py  GettingStarted.md  GettingStarted.txt  Goodwin example.py  README.md
Communication/: Area search Songlin.py  Goodwin example.py
Communication/Examples/: Pixhawk Arming.py  README.md  SimpleGoTo.py  TelemDown.py
Communication/OldCode/: README.md  mismeth.py  mission.py  moveboi.py  testflight.py
Flight Plan/: README.md  mission.waypoints
Hex1819/: HipPy.py
OCR/Auto-Generate/: CMakeLists.txt  OCR
OCR/Auto-Generate/src/: ;  main.cpp
OCR/Generate Config/: CMakeLists.txt  OCR  group_ints.xml  image.xml
OCR/Generate Config/src/: main.cpp
OCR/Read the Result/: CMakeLists.txt  Test  group_ints.xml
OCR/Read the Result/src/: group_ints.xml  main.cpp
TestImages/: README.md
linux/: CMakeLists.txt
src/: FrameResult.cpp  FrameResult.h  HexControl.cpp  HexControl.sln  HexControl.vcxproj  HexControl.vcxproj.filters  Mask.cpp  Mask.h  MaskedImage.cpp  MaskedImage.h  OpenCV.props  OpenCV_Debug.props  Processing.cpp  Processing.h
